// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ResultsInformationModel correctly with hits 1`] = `
<main
  data-test-id="informationModels"
  id="content"
>
  <div
    className="row mb-3"
  >
    <div
      className="col-6 col-lg-4"
    />
    <div
      className="col-6 col-lg-4 offset-lg-4"
    >
      <div
        className="d-flex justify-content-end"
      >
        <Button
          className="fdk-button fdk-button-black-toggle selected"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Relevance
        </Button>
        <Button
          className="fdk-button fdk-button-black-toggle"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Recently published
        </Button>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <aside
      className="search-filters col-lg-4 d-none d-lg-block"
    >
      <span
        aria-hidden="false"
        className="uu-invisible"
      >
        Filtrering
      </span>
      <FilterPills
        history={
          Object {
            "push": [Function],
          }
        }
        location={
          Object {
            "search": "",
          }
        }
        locationSearch={Object {}}
        losItems={null}
        publishers={null}
        themesItems={null}
      />
      <div>
        <Modal
          autoFocus={true}
          backdrop={true}
          backdropTransition={
            Object {
              "mountOnEnter": true,
              "timeout": 150,
            }
          }
          centered={false}
          fade={true}
          isOpen={false}
          keyboard={true}
          modalTransition={
            Object {
              "timeout": 300,
            }
          }
          onClosed={[Function]}
          onOpened={[Function]}
          role="dialog"
          toggle={[Function]}
          zIndex={1050}
        >
          <ModalHeader
            charCode={215}
            closeAriaLabel="Close"
            tag="h5"
            toggle={[Function]}
            wrapTag="div"
          >
            Filter
          </ModalHeader>
          <ModalBody
            tag="div"
          >
            <div
              className="search-filters"
            >
              <FilterTree
                activeFilter={null}
                aggregations={Array []}
                collapseItems={false}
                handleFiltering={[Function]}
                referenceDataItems={null}
                title="Responsible"
              />
            </div>
          </ModalBody>
          <ModalFooter
            tag="div"
          >
            <Button
              className="fdk-button"
              color="primary"
              onClick={[Function]}
              tag="button"
            >
              Close
            </Button>
          </ModalFooter>
        </Modal>
        <FilterTree
          activeFilter={null}
          aggregations={Array []}
          collapseItems={false}
          handleFiltering={[Function]}
          referenceDataItems={null}
          title="Responsible"
        />
      </div>
    </aside>
    <div
      className="col-12 col-lg-8"
      id="informationModels"
    >
      <SearchHitItem
        fadeInCounter={0}
        item={
          Object {
            "id": "eadda99c-781e-4900-8f54-8dd298168382",
            "publisher": Object {
              "id": "970018131",
              "name": "UTDANNINGSDIREKTORATET",
              "orgPath": "/STAT/872417842/970018131",
              "prefLabel": Object {
                "no": "Utdanningsdirektoratet",
              },
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/970018131",
            },
            "schema": Object {
              "$id": "http://localhost:8080/informationmodels/eadda99c-781e-4900-8f54-8dd298168382/schema",
              "definitions": Object {
                "Adresse": Object {
                  "properties": Object {
                    "adresse": Object {
                      "items": Object {
                        "type": "string",
                      },
                      "type": "array",
                    },
                    "kommune": Object {
                      "type": "string",
                    },
                    "kommunenummer": Object {
                      "type": "string",
                    },
                    "land": Object {
                      "type": "string",
                    },
                    "landkode": Object {
                      "type": "string",
                    },
                    "postnummer": Object {
                      "type": "string",
                    },
                    "poststed": Object {
                      "type": "string",
                    },
                  },
                },
                "Enhet": Object {
                  "properties": Object {
                    "_links": Object {
                      "$ref": "#/definitions/Self",
                    },
                    "antallAnsatte": Object {
                      "type": "integer",
                    },
                    "forretningsadresse": Object {
                      "$ref": "#/definitions/Adresse",
                    },
                    "institusjonellSektorkode": Object {
                      "$ref": "#/definitions/Sektorkode",
                    },
                    "konkurs": Object {
                      "type": "boolean",
                    },
                    "maalform": Object {
                      "type": "string",
                    },
                    "naeringskode1": Object {
                      "$ref": "#/definitions/Naeringskode",
                    },
                    "naeringskode2": Object {
                      "$ref": "#/definitions/Naeringskode",
                    },
                    "naeringskode3": Object {
                      "$ref": "#/definitions/Naeringskode",
                    },
                    "navn": Object {
                      "type": "string",
                    },
                    "organisasjonsform": Object {
                      "$ref": "#/definitions/Organisasjonsform",
                    },
                    "organisasjonsnummer": Object {
                      "type": "string",
                    },
                    "postadresse": Object {
                      "$ref": "#/definitions/Adresse",
                    },
                    "registreringsdatoEnhetsregisteret": Object {
                      "type": "string",
                    },
                    "registrertIForetaksregisteret": Object {
                      "type": "boolean",
                    },
                    "registrertIFrivillighetsregisteret": Object {
                      "type": "boolean",
                    },
                    "registrertIMvaregisteret": Object {
                      "type": "boolean",
                    },
                    "registrertIStiftelsesregisteret": Object {
                      "type": "boolean",
                    },
                    "sisteInnsendteAarsregnskap": Object {
                      "type": "string",
                    },
                    "stiftelsedato": Object {
                      "type": "string",
                    },
                    "underAvvikling": Object {
                      "type": "boolean",
                    },
                    "underTvangsavviklingEllerTvangsopplosning": Object {
                      "type": "boolean",
                    },
                  },
                },
                "Href": Object {
                  "properties": Object {
                    "href": Object {
                      "type": "string",
                    },
                  },
                },
                "Naeringskode": Object {
                  "properties": Object {
                    "beskrivelse": Object {
                      "type": "string",
                    },
                    "kode": Object {
                      "type": "string",
                    },
                  },
                },
                "Organisasjonsform": Object {
                  "properties": Object {
                    "_links": Object {
                      "$ref": "#/definitions/Self",
                    },
                    "beskrivelse": Object {
                      "type": "string",
                    },
                    "kode": Object {
                      "type": "string",
                    },
                  },
                },
                "Organisasjonsformer": Object {
                  "properties": Object {
                    "organisasjonsformer": Object {
                      "items": Object {
                        "$ref": "#/definitions/Organisasjonsform",
                      },
                      "type": "array",
                    },
                  },
                },
                "Sektorkode": Object {
                  "properties": Object {
                    "beskrivelse": Object {
                      "type": "string",
                    },
                    "kode": Object {
                      "type": "string",
                    },
                  },
                },
                "Self": Object {
                  "properties": Object {
                    "self": Object {
                      "$ref": "#/definitions/Href",
                    },
                  },
                },
                "_Organisasjonsformer": Object {
                  "properties": Object {
                    "embedded": Object {
                      "$ref": "#/definitions/Organisasjonsformer",
                    },
                  },
                },
              },
            },
            "title": "Enhetsregisteret",
            "uri": "http://localhost:8080/informationmodels/eadda99c-781e-4900-8f54-8dd298168382",
          }
        }
        key="eadda99c-781e-4900-8f54-8dd298168382"
        publishers={null}
      />
      <div
        className="col-12 d-flex justify-content-center"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Sidepaginering.
        </span>
        <PaginationBoxView
          activeClassName="active"
          breakClassName="break-me"
          breakLabel={
            <span>
              ...
            </span>
          }
          containerClassName="pagination"
          disableInitialCallback={true}
          disabledClassName="disabled"
          forcePage={0}
          marginPagesDisplayed={1}
          nextClassName="next"
          nextLabel="Neste side"
          onPageChange={[Function]}
          pageCount={1}
          pageRangeDisplayed={2}
          previousClassName="previous"
          previousLabel="Forrige side"
          subContainerClassName="pages pagination"
        />
      </div>
    </div>
  </div>
</main>
`;

exports[`should render ResultsInformationModel correctly with minimum of props and no hits 1`] = `
<main
  data-test-id="informationModels"
  id="content"
>
  <div
    className="row mb-3"
  >
    <div
      className="col-6 col-lg-4"
    />
    <div
      className="col-6 col-lg-4 offset-lg-4"
    >
      <div
        className="d-flex justify-content-end"
      >
        <Button
          className="fdk-button fdk-button-black-toggle selected"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Relevance
        </Button>
        <Button
          className="fdk-button fdk-button-black-toggle"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Recently published
        </Button>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <aside
      className="search-filters col-lg-4 d-none d-lg-block"
    >
      <span
        aria-hidden="false"
        className="uu-invisible"
      >
        Filtrering
      </span>
      <FilterPills
        history={
          Object {
            "push": [Function],
          }
        }
        location={
          Object {
            "search": "",
          }
        }
        locationSearch={Object {}}
        losItems={null}
        publishers={null}
        themesItems={null}
      />
    </aside>
    <div
      className="col-12 col-lg-8"
      id="informationModels"
    >
      <div
        className="col-12 d-flex justify-content-center"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Sidepaginering.
        </span>
        <PaginationBoxView
          activeClassName="active"
          breakClassName="break-me"
          breakLabel={
            <span>
              ...
            </span>
          }
          containerClassName="pagination"
          disableInitialCallback={true}
          disabledClassName="disabled"
          forcePage={0}
          marginPagesDisplayed={1}
          nextClassName="next"
          nextLabel="Neste side"
          onPageChange={[Function]}
          pageCount={1}
          pageRangeDisplayed={2}
          previousClassName="previous"
          previousLabel="Forrige side"
          subContainerClassName="pages pagination"
        />
      </div>
    </div>
  </div>
</main>
`;
